# app-rds-generator

./: .flake8  .gitignore  AGENTS.md  CLAUDE.md  FOLDER_STRUCTURE.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.streamlit/: config.toml  secrets.example.toml  secrets.toml
docs/: api.md
examples/: basic_usage.py
src/: __init__.py  app.py  rds_generator.py
src/config/: settings.py
src/rds_generator/: __init__.py  app.py  config.py  core.py  image_utils.py  math_utils.py
src/ui/: download.py  main_area.py  sidebar.py
src/utils/: image_utils.py  math_utils.py
tests/: __init__.py  test_app.py  test_config.py  test_core.py  test_image_utils.py  test_math_utils.py
