[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rds-generator"
version = "1.0.0"
description = "Random Dot Stereogram Generator for Psychology Research"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Ogawa Lab", email = "hirokazu.ogawa@kwansei.ac.jp"},
]
keywords = ["psychology", "stereogram", "vision", "research", "rds"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Psychology",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "streamlit==1.57.0",
    "numpy==2.4.4",
    "scipy==1.17.1",
    "pillow==12.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "black==26.3.1",
    "flake8==7.3.0",
    "mypy==1.20.2",
    "pre-commit==4.6.0",
]
test = [
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
]

[project.urls]
Homepage = "https://github.com/hrkzogw/ogwlab"
"Bug Reports" = "https://github.com/hrkzogw/ogwlab/issues"
Source = "https://github.com/hrkzogw/ogwlab"
Documentation = "https://ogwlab-app-rds-generator.streamlit.app/"

[project.scripts]
rds-generator = "rds_generator.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=src/rds_generator",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--strict-markers",
    "--disable-warnings",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "streamlit.*",
    "scipy.*",
    "PIL.*",
]
ignore_missing_imports = true

[tool.flake8]
max-line-length = 88
extend-ignore = [
    "E203",  # whitespace before ':'
    "E501",  # line too long
    "W503",  # line break before binary operator
]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".eggs",
    "*.egg-info",
]
